英語版の利用規約とプライバシーポリシーを追加

--- a/権利表記&スタッフ/dig Pati/スタッフ.md
+++ b/権利表記&スタッフ/dig Pati/スタッフ.md
@@ -1,4 +1,4 @@
-# ■『Marge Pati』■
+# ■『dig Pati -casual game-』■
 
 ## スタッフ
 
@@ -10,10 +10,10 @@
 ### BGM
 #### ・DOVA-SYNDROME
 ワクワクアリクイ / かずち
+効果音ラボ
 
 ### 3Dモデル
 Tiny Dragon/SURIYUN
 
 ### イラスト素材
-
 GUI PRO Kit - Casual Game
